--- a/francesca vella website/francesca-vella.html
+++ b/francesca vella website/francesca-vella.html
@@ -20,10 +20,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="file:///Users/francescavella/Desktop/francesca-vella.github.io/assignments/Homepage/homepage.html#">Home</a>
+                      <a class="nav-link active" aria-current="page" >Home</a>
                    </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="file:///Users/francescavella/Desktop/francesca-vella.github.io/assignments/Artists%20Page/Artists.html">The Artist</a>
+                      <a class="nav-link" >The Artist</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">Contact</a>
@@ -42,6 +42,7 @@
         <div class="wrapper">
             <h2><strong>BFA</strong><br>
             Exhibition 2022</h2>
+            <img src="bfa.jpg" alt="bfa">
         </div>
     </div>
     
@@ -49,7 +50,7 @@
         <div class="wrapper">
             <article><h3>the Artists</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec euismod leo a nibh dignissim tincidunt. Nam ultricies odio ac neque suscipit volutpat. Ut dictum adipiscing felis sed malesuada. Integer porta sem nec nibh hendrerit imperdiet. </p>
-              <a href="file:///Users/francescavella/Desktop/francesca-vella.github.io/assignments/Artists%20Page/Artists.html"><img src="artistpreview.png" alt="artistpreview" /></a>
+              <img src="artistpreview.png" alt="artistpreview">
               </article>
         </div>
     </div>
